--- a/meta/style.css
+++ b/meta/style.css
@@ -76,9 +76,13 @@
   }
   
   circle {
-    transition: 200ms;
-    transform-origin: center;
-    transform-box: fill-box;
+    fill: steelblue;
+    fill-opacity: 0.7;
+    transition: all 200ms;
+
+  @starting-style {
+    r: 0;
+  }
   }
   
   circle:hover {
@@ -92,15 +96,6 @@
     shape-rendering: crispEdges;
   }
   
-  circle {
-    transition: 200ms;
-    transform-origin: center;
-    transform-box: fill-box;
-  }
-  
-  circle:hover {
-    transform: scale(1.5);
-  }
   
   .tooltip {
     position: fixed;
@@ -157,4 +152,43 @@
 #commit-progress {
   width: 70%;
   vertical-align: middle;
+}
+
+#files {
+  display: grid;
+  grid-template-columns: 1fr 4fr; 
+  gap: 4px 12px;              
+}
+
+#files dt {
+  grid-column: 1;
+  margin: 0;
+  font-weight: bold;
+}
+
+#files dd {
+  grid-column: 2;         
+  display: flex;
+  flex-wrap: wrap;
+  align-items: start;     
+  align-content: start;  
+  gap: 0.15em;           
+  padding-top: 0.6em;   
+  margin-left: 0;       
+}
+
+.loc {
+  display: flex;
+  width: 0.5em;
+  aspect-ratio: 1;
+  background: var(--color);  
+  border-radius: 50%;
+}
+
+#files > div {
+  display: grid;
+  grid-column: 1 / -1;
+  grid-template-columns: subgrid;
+  padding: 4px 0;
+  border-bottom: 1px solid #eee;
 }
